[v1.8.3] Fixed mouse click effect conflict with scrollbars.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,7 @@
     @apply text-red-500 text-sm tracking-wider p-1;
   }
 }
+
+body {
+  overflow: hidden;
+}
